[package]
name = "lnd-exporter"
version = "0.1.0"
edition = "2018"

[dependencies]
env_logger = "0.9.0"
clap = { version = "3.0.5", default-features = false, features = ["std", "derive"] }
hyper = "0.14.16"
lnrpc = { path = "./lnrpc" }
log = "0.4.14"
prometheus = { version = "0.13.0", features = ["process"] }
tokio = { version = "1.15.0", features = ["full"] }
